<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The title of the NFC tag application -->
    <string name="app_name">XcubeNFCDemo</string>

    <!-- The title for the activity that shows a tag that was just scanned -->
    <string name="title_scanned_tag">New tag collected</string>

    <!-- Heading for the text of the content in the "my tag" feature. -->
    <string name="nutrition_calories">Calories</string>
    <string name="nutrition_protein">Protein</string>
    <string name="nutrition_carbs">Carbohydrate</string>
    <string name="nutrition_fat">Fat</string>
    <string name="nutrition_fibre">Fibre</string>
    <string name="nutrition_salt">Salt</string>
    <string name="item_image">Image of food item</string>
    <string name="iteminfo_back">Back</string>
	<string name="basket_checkout">Checkout</string>
	<string name="basket">Basket</string>
	<string name="fridge">Fridge</string>
	<string name="nutrition">Nutritional</string>
	
</resources>
